--- a/09-Tecnologie_Web-Cascade_Style_Sheets/esempio03.html
+++ b/09-Tecnologie_Web-Cascade_Style_Sheets/esempio03.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1 style="color:blue;text-align:center;">This is a heading</h1>
-    <p style="color:red;">This is a prova.</p>
+    <p style="color:red;">This is a paragraph.</p>
 </body>
 </html>
